k8s/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-lab-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing-lab-db
  template:
    metadata:
      labels:
        app: testing-lab-db
    spec:
      containers:
        - name: testing-lab-db
          image: ghcr.io/chesterchutw/testing-lab-db:latest
          # env:
          #   - name: MYSQL_ROOT_PASSWORD
          #     value: root
          #   - name: MYSQL_DATABASE
          #     value: app
          #   - name: MYSQL_USER
          #     value: app
          #   - name: MYSQL_PASSWORD
          #     value: app 
          ports:
            - containerPort: 27017
          # livenessProbe:
          #   tcpSocket:
          #     port: 27017
          #   initialDelaySeconds: 10   # Delay before liveness probe is initiated
          #   periodSeconds: 5          # How often to perform the probe
          #   timeoutSeconds: 2         # How long to wait for the probe to timeout
          #   failureThreshold: 3       # After how many failures the pod should be restarted
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
