k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-lab-backend
spec:
  type: ClusterIP
  selector:
    app: testing-lab-backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
