k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-lab-db
spec:
  type: ClusterIP
  selector:
    app: testing-lab-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
