k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-lab-frontend
spec:
  type: ClusterIP
  selector:
    app: testing-lab-frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
